--- a/Section-2/index.html
+++ b/Section-2/index.html
@@ -7,15 +7,14 @@
 </head>
 <body>
 	<h1>Tier 1 Synopsis</h1>
-	<h2>Budget: $ <span id="budget">Budget Number</span></h2>
-	<h3>Remaining Budget: $ <span id="remainingBudget">Remaining Budget</span></h3>
+	<h2>Budget: $ <span id="budget"></span></h2>
+	<h3>Remaining Budget: $ <span id="remainingBudget"></span></h3>
 	<input type="text" placeholder="Purchased Item" id="item">
 	<input type="number" placeholder="Purchased Price" id="price">
 	<button id="add">Add</button>
 	<h3>Purchases:</h3>
-	<ul>
-		<li>Purchaase Name: $Purchase Price</li>
+	<ul id="purchasesOut">
+		<li>Purchase Name: $Purchase Price</li>
 	</ul>
-
 </body>
 </html>
